cmake_minimum_required (VERSION 3.5)

include (ExternalProject)

set (WANGLE_EXTERNAL_PROJECT wangle-git)
set (WANGLE_SOURCE_DIR ${CMAKE_CURRENT_BINARY_DIR}/${WANGLE_EXTERNAL_PROJECT}-prefix/src/${WANGLE_EXTERNAL_PROJECT}/wangle)

ExternalProject_Add (${WANGLE_EXTERNAL_PROJECT}
    GIT_REPOSITORY "https://github.com/danielsuo/wangle.git"
    GIT_TAG "master"
    UPDATE_COMMAND ""
    CONFIGURE_COMMAND export CC=${CMAKE_C_COMPILER} && export CXX=${CMAKE_CXX_COMPILER} && cd ${WANGLE_SOURCE_DIR} && cmake . -DCMAKE_INSTALL_PREFIX=${CMAKE_CURRENT_BINARY_DIR} -DBUILD_TESTS=OFF
    BUILD_COMMAND export CC=${CMAKE_C_COMPILER} && export CXX=${CMAKE_CXX_COMPILER} && cd ${WANGLE_SOURCE_DIR} && make -j
    INSTALL_COMMAND cd ${WANGLE_SOURCE_DIR} && make install
)

add_dependencies (${WANGLE_EXTERNAL_PROJECT} ${FOLLY_EXTERNAL_PROJECT})

set (WANGLE_EXTERNAL_PROJECT ${WANGLE_EXTERNAL_PROJECT} PARENT_SCOPE)
set (WANGLE_LIBRARY_NAME ${CMAKE_SHARED_LIBRARY_PREFIX}wangle${CMAKE_SHARED_LIBRARY_SUFFIX})
set (WANGLE_INCLUDE_DIR ${CMAKE_CURRENT_BINARY_DIR}/include PARENT_SCOPE)
set (WANGLE_LIBRARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/lib PARENT_SCOPE)
file (GLOB WANGLE_LIBRARIES RELATIVE ${CMAKE_CURRENT_BINARY_DIR} lib/*)

add_library (wangle SHARED IMPORTED)
set_target_properties(wangle PROPERTIES IMPORTED_LOCATION ${WANGLE_LIBRARY_DIR}/${WANGLE_LIBRARY_NAME})
