cmake_minimum_required (VERSION 3.5)

include (ExternalProject)

set (YASM_EXTERNAL_PROJECT yasm-git)
set (YASM_SOURCE_DIR ${CMAKE_CURRENT_BINARY_DIR}/${YASM_EXTERNAL_PROJECT}-prefix/src/${YASM_EXTERNAL_PROJECT}/yasm)

EXTERNALPROJECT_ADD (
	${YASM_EXTERNAL_PROJECT}
	URL http://www.tortall.net/projects/yasm/releases/yasm-1.3.0.tar.gz
	CONFIGURE_COMMAND ./configure --prefix=${CMAKE_BINARY_DIR}
	BUILD_IN_SOURCE 1
	)

set (YASM_EXTERNAL_PROJECT ${YASM_EXTERNAL_PROJECT} PARENT_SCOPE)
set (YASM_LIBRARY_NAME ${CMAKE_SHARED_LIBRARY_PREFIX}yasm${CMAKE_STATIC_LIBRARY_SUFFIX})
set (YASM_INCLUDE_DIR ${CMAKE_CURRENT_BINARY_DIR}/include PARENT_SCOPE)
set (YASM_LIBRARY_DIR ${CMAKE_BINARY_DIR}/lib PARENT_SCOPE)
# file (GLOB YASM_LIBRARIES RELATIVE ${CMAKE_CURRENT_BINARY_DIR} lib/*)

add_library (yasm SHARED IMPORTED)
set_target_properties(yasm PROPERTIES IMPORTED_LOCATION ${CMAKE_BINARY_DIR}/lib/${YASM_LIBRARY_NAME})
